web: * get rid of the link's background on IE10 * specify the right width for #banner * fix menu overlapping when the width was small * few other minor improvements
git-svn-id: https://svn.code.sf.net/p/tortoisesvn/code/trunk@24082 154be670-7969-47af-9ab0-c6fb378d2295

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,6 +11,13 @@ a {
     text-decoration: none;
 }
 
+/* IE 10: Remove grey background on active links
+   https://github.com/necolas/normalize.css/issues/172
+   Remove this when it's in normalize.css */
+a:active {
+    background-color: transparent;
+}
+
 blockquote {
     background: transparent url("../img/quoteleft.png") left top no-repeat;
 }
@@ -202,7 +209,7 @@ img.centered {
     background: url("../img/tortoisesvn_logo_hor468x64.png") no-repeat center top;
     margin: 0 auto;
     padding: 0;
-    width: 870px;
+    width: 468px;
     height: 64px;
 }
 
@@ -212,7 +219,8 @@ img.centered {
     -webkit-border-radius: 2px;
        -moz-border-radius: 2px;
             border-radius: 2px;
-    margin: 0 auto;
+    display: inline-block;
+    margin: 0 auto -4px auto;
     padding: 0;
     text-shadow: 0 0 2px #B7B7B7;
     width: 910px;
@@ -234,10 +242,6 @@ img.centered {
     margin-right: 3px;
     margin-top: 20px;
     padding: 8px 20px;
-}
-
-#menu a:focus {
-    outline: none;
 }
 
 #menu a:hover {
@@ -379,20 +383,21 @@ a.fancybox,
     border-bottom: none;
 }
 
-/* all A tags whose HREF attribute ends in .pdf */
-a[href$=".pdf"],
-a[href$=".pdf?download"] {
-    background: transparent url("../img/icon_pdf.gif") no-repeat center right;
-    padding-right: 18px;
+
+a[rel ~="en"] {
+    background: transparent url("../img/icon_english.png") no-repeat center right;
+    padding-right: 18px !important;
 }
 
 /* all A tags whose HREF attribute starts with mailto: */
 a[href ^="mailto:"] {
     background: transparent url("../img/icon_mailto.gif") no-repeat center right;
-    padding-right: 18px;
+    padding-right: 18px !important;
 }
 
-a[rel ~="en"] {
-    background: transparent url("../img/icon_english.png") no-repeat center right;
-    padding-right: 18px;
+/* all A tags whose HREF attribute ends in .pdf */
+a[href$=".pdf"],
+a[href$=".pdf?download"] {
+    background: transparent url("../img/icon_pdf.gif") no-repeat center right;
+    padding-right: 18px !important;
 }
